unpackaged/main/default/objects/ebotdata__Log__c/fields/ebotdata__Log_Name__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Log_Name__c</fullName>
    <label>Log Name</label>
    <type>TextArea</type>
</CustomField>