unpackaged/main/default/objects/ebotdata__Log__c/fields/ebotdata__Log_Type__c.field-meta.xml
<CustomField>
    <fullName>ebotdata__Log_Type__c</fullName>
    <label>Log Type</label>
    <type>TextArea</type>
</CustomField>