unpackaged/main/default/objects/ebotdata__Log__c/listViews/ebotdata__All.listView-meta.xml
<ListView>
    <fullName>ebotdata__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>